# RainRenderer

./: CMakeLists.txt  README.md
include/math/: animatedtransform.h  quaternion.h  transform.h  vector.h
include/media/: medium.h
include/shape/: shape.h
include/utils/: bound.h  interaction.h  ray.h
src/main/: main.cpp
src/math/: animatedtransform.cpp  quaternion.cpp  transform.cpp  vector.cpp
src/utils/: interaction.cpp
